<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="br.com.maikonsilva.meuapp.MainActivity">
    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_edit_mensagem"/>
    <EditText
        android:id="@+id/editTextTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_edit_mensagem1"
        android:layout_marginTop="40dp"/>
    <EditText
    android:id="@+id/editTextEndereco"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:hint="@string/hint_edit_mensagem2"
    android:layout_marginTop="80dp"/>
    <EditText
        android:id="@+id/editTextSiteSocial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_edit_mensagem3"
        android:layout_marginTop="120dp"/>
    <EditText
        android:id="@+id/editTextNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_edit_mensagem4"
        android:layout_marginTop="155dp"/>
    <Button
    android:id="@+id/buttonAcao"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/text_btn_acao"
    android:layout_below="@+id/editTextNome"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="150dp" />
    <Button
        android:id="@+id/buttonAcao1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_acao1"
        android:layout_below="@+id/editTextNome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="190dp" />
</RelativeLayout>

